fixed issue with div.page-header and anchor links (wrong padding offset)

--- a/css/socinfo.less
+++ b/css/socinfo.less
@@ -11,6 +11,10 @@
   }
 }
 
+section {
+  padding-top: 60px;
+}
+
 .sidebar-nav {
   padding: 9px 0;
 }
